syntax = "proto3";

option java_package = "com.example";

package com.example;

service PaymentTransactionService {
    rpc getPaymentTransaction(GetPaymentTransactionRequest) returns (GetPaymentTransactionResponse);
}

message GetPaymentTransactionRequest {
}

message GetPaymentTransactionResponse {
}

message PaymentTransaction {
    string id = 1;
    string paymentAttemptId = 2;
}

message GatewayPaymentTransaction {

}